{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "467a8e00-3c33-4f47-94b0-2163c473d73b",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "03b93c7c-4a49-4ce4-9a97-83b2c6f716db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "422ecb5f-6a23-4a96-852a-0c54400389bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e4618651-e553-4c88-ad36-1e5e4162407d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "75087514-e5cf-4c72-b261-da611b8c57a1",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}